--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
   <version>1.0-SNAPSHOT</version>
   <name>nextwork-web-project Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <repositories>
+    <repository>
+        <id>nextwork-devops-cicd</id>
+        <url>https://asia-south1-maven.pkg.dev/dotted-module-328415/nextwork-devops-cicd</url>
+    </repository>
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -17,5 +23,12 @@
   </dependencies>
   <build>
     <finalName>nextwork-web-project</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.2</version>
+      </plugin>
+    </plugins>
   </build>
 </project>
